---
config:
  layout: elk
  theme: neutral
---
%%{ init: { 'themeVariables': { 'fontSize': '14px', 'fontFamily': 'Arial' } } }%%
classDiagram
    class Status {
        <<enumeration>>
        ANDAMENTO
        ATRASADO
        CONCLUIDO_PRAZO
        CONCLUIDO_ATRASO
    }
    class Urgencia{
        <<enumeration>>
        CRITICO
        ALTO
        MODERADO
        BAIXO
    }
    class Visibilidade{
        <<enumeration>>
        PUBLICO
        APENAS_EQUIPE
        APENAS_GERENTE
        PRIVADO
    }
    class Usuario {
        <<abstract>>
        - id: int
        - nome: string
        - empresa: string
        - email: string
        - cargo: string
        - senha: string
        - tipo: string
        + comentar()
    }
    class Gerente {
        + listarEquipe()
        + listarProjetos()
        + listarTarefas()
    }
    class Colaborador {
        + concluirTarefa()
    }
    class Tarefa {
        - id: int
        - titulo: string
        - descricao: string
        - status: Status
        - urgencia: Urgencia
        - visibilidade: Visibilidade
        - dataCriacao: Date
        - dataPrazo: Date
    }
    class Projeto {
        - id: int
        - nome: string
        - descricao: string
        - dataCriacao: Date
        + listarTarefas()
        + listarMembros()
    }
    class Equipe {
        - id: int
        - nome: string
        - descricao: string
        + adicionaMembro(Usuario)
        + removeMembro(Usuario)
        + listarMembros()
    }
    class ConviteEquipe {
        - id: int
        - dataConvite: Date
        - dataVencimento: Date
        - mensagem: string
    }
    class Comentario {
        - id: int
        - mensagem: string
        - dataEnvio : Date
    }
    class Anexo {
        - id: int
        - pathArquivo: string
    }
    class Checklist {
        - id: int
        - titulo: string
    }
    class ItemChecklist {
        - id: int
        - descricao: string
        - concluido: bool
    }
    class Dashboard {
        - id: int
        + visualizarResumo()
    }
    class Lembrete {
        - id: int
        - mensagem: string
        - data: Date
    }

    Usuario <|-- Gerente
    Usuario <|-- Colaborador
    Usuario "1" *-- "1" Dashboard
    Colaborador "*" -- "*" Tarefa
    Tarefa "1" -- "*" Anexo
    Tarefa "1" -- "1" Checklist
    Checklist "1" *-- "*" ItemChecklist
    Projeto "1" -- "*" Tarefa
    Projeto "1" -- "*" Anexo
    Equipe "*" o-- "*" Usuario : "membros"
    Equipe "1" o-- "1" Gerente
    Projeto "*" ..> "*" Equipe
    Comentario "*" ..> "1" Usuario
    Comentario "*" ..> "1" Tarefa
    Comentario "1" -- "*" Comentario : "respostas"
    ConviteEquipe "1" ..> "1" Usuario
    ConviteEquipe "1" ..> "1" Equipe
    Lembrete "1" ..> "1" Tarefa
    Lembrete "1" ..> "1" Usuario